Fix ol spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,6 +92,7 @@ p {
   }
 }
 
+ol,
 ul {
   margin: 18px 0;
   padding-inline-start: 40px;
